--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,7 @@
+v0.7.4(21/07/2017)
+- Correcao Temporada Especial
+- Opção para escolher a melhor fonte automaticamente
+
 v0.7.3(02/07/2017)
 - Correcao Openload
 
