--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,7 @@
+v0.7.8(28/07/2017)
+- Correcao das imagens nos episodios das series
+- Adicionado a Listas pessoais do Trakt
+
 v0.7.7(24/07/2017)
 - Correcao dos Filmes/Episodios Vistos com o Trakt
 
