--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,8 @@
+v0.8.0(13/08/2017)
+- Adicionado seleção de qualidade para os filmes, ver definicoes.
+- Adicionado botao para remover dos favoritos e dos agendados.
+- Correção da pesquisa.
+
 v0.7.9(31/07/2017)
 - Correcao da informação do filme/episodio sem legenda.
 
