--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,7 @@
+v0.8.1(18/08/2017)
+- Correcao de marcar visto no Trakt (Filmes)
+- Implementado mensagem de erro quando email ou password estao erradas.
+
 v0.8.0(13/08/2017)
 - Adicionado seleção de qualidade para os filmes, ver definicoes.
 - Adicionado botao para remover dos favoritos e dos agendados.
