--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,8 @@
+v0.8.2(24/09/2017)
+- Correcao de OpenLoad
+- Correcao de extensao no download
+- Criação de um novo servidor: Vidoza
+
 v0.8.1(18/08/2017)
 - Correcao de marcar visto no Trakt (Filmes)
 - Implementado mensagem de erro quando email ou password estao erradas.
