--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,8 @@
+v0.8.4(29/10/2017)
+- Novo Servidor (Streamango)
+- Fimes para Putos (menu novo)
+- Filmes/Series/Animes ordenados por imdb (menu novo)
+
 v0.8.3(24/09/2017)
 - Force update
 
