--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,6 @@
+v0.8.8(17/04/2018)
+- OpenLoad e MrPiracy corrigido
+
 v0.8.7(27/01/2018)
 - Trakt username fix, ja aceita usernames com .
 - OpenLoad corrigido
