--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,8 @@
+v0.9.7(21/03/2020)
+- Correção MixDrop
+- Correção marcar como visto, se existir conta Trakt, marca como visto no Trakt
+- Correção servidor MrPiracy
+
 v0.9.6(15/01/2020)
 - Adicionado servidor Mixdrop
 - Adicionado ano 2020
