--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,7 @@
+v0.9.8(31/03/2020)
+- Correção servidor MrPiracy
+- Mudança de imagens
+
 v0.9.7(21/03/2020)
 - Correção MixDrop
 - Correção marcar como visto, se existir conta Trakt, marca como visto no Trakt
