--- a/plugin.video.mrpiracy/changelog.txt
+++ b/plugin.video.mrpiracy/changelog.txt
@@ -1,3 +1,6 @@
+v1.0.7(20/09/2020)
+- Adicionar a opção "A Seguir"
+
 v1.0.6(14/08/2020)
 - Correção Servidor MrPiracy
 - Correção Paginação +10 e +100
