--- a/plugin.video.mrpiracy3/changelog.txt
+++ b/plugin.video.mrpiracy3/changelog.txt
@@ -1,4 +1,7 @@
-v3.0.2(03/04/2021)
+v3.0.4(04/04/2021)
+- fix Takt enconding
+
+v3.0.3(03/04/2021)
 - Trakt
 - Marcar como visto e seguir proximo episodio no final do video
 - Trailer fix
